optimize: update readme.md